tests/paczka1/fuzzy1/86522962.err
Error in line 6: EazQw1rV5k6 A518 -5,0
Error in line 3: EazQw1rV5k6 A518 82,8
Error in line 2: oQU S528 70,5
Error in line 12: A379 S528 -2,2
Error in line 5: A379 S528 89,5
Error in line 1: AB1rJpB2PV S528 54,3
Error in line 14: AB1rJpB2PV S956 30,7
